# vgpu-driver-builder

./: .gitignore  .markdownlint.json  AGENTS.md  README.md  TODO.md
.github/workflows/: build-operator-image.yml
charts/vgpu-driver-operator/: Chart.yaml  values.yaml
charts/vgpu-driver-operator/crds/: vgpudriverimages.vgpu.flatcar.io.yaml
charts/vgpu-driver-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap-buildfiles.yaml  cronjob-flatcar-poll.yaml  deployment.yaml  role.yaml  rolebinding.yaml  secret-registry.yaml  secret-s3.yaml  serviceaccount.yaml
docs/: architecture.md  gpu-operator-integration.md  installation.md  migration-from-terraform.md
docs/examples/flux/: README.md  gitrepository.yaml  helmrelease.yaml  kustomization.yaml  namespace.yaml  ocirepository.yaml  secrets.example.yaml  values-overrides.yaml  vgpudriverimage.yaml
docs/plan/: v0.1.0-implementation-plan.md
operator/: Dockerfile  coverage.json  pyproject.toml
operator/src/vgpu_driver_operator/: __init__.py  __main__.py  cli.py  crd.py  flatcar.py  gc.py  job_factory.py  main.py  poller.py  reconciler.py  registry.py
operator/tests/: test_cli.py  test_crd.py  test_flatcar.py  test_gc.py  test_job_factory.py  test_main.py  test_poller.py  test_reconciler.py  test_registry.py
operator/tests/snapshots/: precompile_job.json  runtime_job.json
