[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vgpu-driver-operator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kopf>=1.37",
    "kubernetes>=29",
    "requests>=2.31",
    "packaging>=23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "responses>=0.25",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
